compiler/testData/asJava/lightClasses/compilationErrors/ActualClass.java
public final class B {
    public B() { /* compiled code */ }
}
